# CosmoCorral

./: .env.example  .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  DATA_FLOW_EXAMPLES.md  FLAG_DETECTION_INTEGRATION.md  FLAG_DETECTION_SUMMARY.md  FLOW_VERIFICATION_REPORT.md  GLUED_UP.md  HOW_TO_USE.md  ML_PREDICTION_EXPLAINED.md  PREDICTION_WALKTHROUGH.md  QUICK_START.md  README.md  SETUP.md  START_HERE.md  SYSTEM_VALIDATION_REPORT.md  TESTS_COMPLETE.md  TEST_REPORT.md  TEST_RESULTS.md  TEST_SUMMARY.md  quick_test.ps1  shared_types.ts  test_system.ps1
client/: README.md
client/eyecore_mvp/: Cargo.toml  DEPLOYMENT.md  DOCUMENTATION.md  EXAMPLES.md  GETTING_STARTED.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  YOUR_DATA_REPORT.md  test_demo.ps1
client/eyecore_mvp/data/anomalies/: anomalies_2025-10-26_01-23-29-167_5d06365e.json  anomalies_2025-10-26_01-23-34-218_5d06365e.json  anomalies_2025-10-26_01-23-51-138_9b1c3396.json  anomalies_2025-10-26_01-28-38-145_52429556.json  anomalies_2025-10-26_01-28-43-204_52429556.json  anomalies_2025-10-26_01-59-28-537_18e3ed98.json  anomalies_2025-10-26_01-59-33-600_18e3ed98.json  (+347 more)
client/eyecore_mvp/data_schemas/: EnhancedScreenKeystroke.schema.json  EyeCoreData.schema.json  INDEX.md  README.md  SCHEMAS_MANIFEST.md
client/eyecore_mvp/flag_detection/: Cargo.toml  README.md  __init__.py  flag_data_generator.py  ml_classifier.py  orchestrator.py  pattern_detector.py  test_flag_detection.py
client/eyecore_mvp/src/: audio_cleaner.rs  data_collector.rs  main.rs  models.rs  storage.rs  utils.rs  voice.rs  websocket_client.rs
(+1017 files in other folders)
