[package]
name = "flag_detection"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
